syntax = "proto3";

package sec06;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.vinsguru.models.sec06";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountRsesponse{
  repeated AccountBalance accounts = 1;
}

service BankService {
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountRsesponse);
}